--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <tr>
             <td>Email: hectorjairmina@gmail.com</td>
             <center><h1>MI PORTAFOLIO</h1></center>
-            <center><img class="borde" src="Taller menu/Imagenes/foto.jpg" alt="foto" width="100"></center>
+            <center><img class="borde" src="Imagenes/foto.jpg" alt="foto" width="100"></center>
         </tr>
     </table>
     <center><h2>SKILLS</h2></center>
